2003-08-18    <dgay@barnowl.research.intel-research.net>

	* src/main.cc (main): Add missing --file option for getopt
	  [Thanks to Mike Hudson <pontifex@isys.ca>]

2003-08-15  Theodore A. Roth  <troth@openavr.org>

	* Makefile.am (dist-hook): New rule.
	* configure.ac (AC_INIT): Bump version.
	(AC_CONFIG_FILES): Add avarice.spec.
	* avarice.spec.in: New file.

2003-08-15  Theodore A. Roth  <troth@openavr.org>
[Thanks to Nils Kristian Strom <nilsst@omegav.ntnu.no>]

	* src/main.cc (long_opts): Fix short opts to match usage output.

2003-08-08  Theodore A. Roth  <troth@openavr.org>
[Thanks to James Harris  <James.Harris@codan.com.au>]

	* src/gnu_getopt.h: Define HAVE_DECL_GETOPT to fix declaration clash.

2003-08-06    <dgay@barnowl.research.intel-research.net>

	* src/main.cc (main): actually implement --version
	* configure.ac: Bump version.

2003-08-05    <dgay@barnowl.research.intel-research.net>

	* scripts/start-avarice: use new host:portname syntax

2003-08-05  Theodore A. Roth  <troth@openavr.org>

	* configure.ac: Bump version.
	* src/Makefile.am (avarice_SOURCES): Add gnu_getopt* files.
	* src/avarice.h: Delete DEFAULT_PORT.
	* src/gnu_getopt.c: New file.
	* src/gnu_getopt.h: New file.
	* src/gnu_getopt1.c: New file.
	* src/main.cc: Use gnu getop_long() to parse argv.
	Clean up usage() output to be more compact.
	Allow operations (program, erase, verify, write-fuses, etc) to be 
	performed before going into gdb server mode.
	Change "[[hostname] port]" options into a single "[[host]:port]"
	option where ":port" causes avarice to enter server mode.
	All options now have short and long equivalents.

2003-08-04  Theodore A. Roth  <troth@openavr.org>

	* src/main.cc: Revert program flag to default to false.
	Revert setting program flag to false if --verify is given.

2003-07-31  David Gay  <dgay@intel-research.net>

	* src/main.cc (main): when no gdb interaction: don't perform
	extraneous enableProgramming/disableProgramming